--- a/index-j.html
+++ b/index-j.html
@@ -4,37 +4,42 @@
 	<head>
 		<meta charset="utf-8">
 		<title>WebAuthoring</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
+		<!-- header -->
 		<div class="header-wrapper">
 			<!-- img, h1 and nav get  -->
-			<img src="image/logo.JPG" class="header-left" width="80" height="80" alt="猫ロゴ">
-			<h1 class="header-left">WebAuthoring</h1>
-				<div>
-					<ul class="header-left">
-						<li><a href="#">トップ</a></li>
-						<li><a href="#">あなたは誰？</a></li>
-						<li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li>
-						<li><a href="#">考察</a></li>
-					</ul>
-				</div>
+			<img src="image/logo.JPG" class="header-position" width="125" height="125" alt="猫ロゴ">
 				<div>
 					<ul class="header-languages">
 						<li><a href="index-j.html">日本語</a></li>
 						<li><a href="index_en-j.html">English</a></li>
 					</ul>
 				</div>
-			</div>
+			<h1 class="header-left">Web Authoring</h1>
+				<div>
+					<ul class="header-position">
+						<li><a href="#">トップ</a></li>
+						<li><a href="#">あなたは誰？</a></li>
+						<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+						<li><a href="#">W3Cとその説明</a></li>
+						<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+						<li><a href="#">利用したツールの説明</a></li>
+						<li><a href="#">評価実験結果</a></li>
+						<li><a href="#">考察</a></li>
+					</ul>
+				</div>
+		</div>
 		<!-- cat image -->
 		<div class="top-wrapper"></div>
+
 		<div>
 			<!-- <img src="image/top_cat1.JPG" width="1300" height="900" alt="猫"> -->
-			<div>
-
-				<h1>猫について</h1>
-				<p>当然ですが、猫は可愛いです。我々の身近な動物、大きく２つに分かれると思います。それは犬派か猫派かです。</p>
-				<p>私は猫派です。犬も好きですが、癒しを与えてくれるのは猫です。</p>
+			<div class="main-container">
+				<h1>実験の目的</h1>
+				<p>Webドキュメントの文書データ管理の概念と共に，人が見る・使うという観点から文書データの デザインの概念について理解を深める。</p>
+				<p>Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い，様々なWeb サイトやページ対して Web ユーザビリティや Web アクセシビリティの調査を行い，考察する。</p>
 			</div>
 		</div>
 	<footer> 
