--- a/index_en-j.html
+++ b/index_en-j.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Cat World</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 	<header id="header_whole">
