add file of navi

--- a/index-j.html
+++ b/index-j.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
-		<!-- header -->
+		<!-- *****************common    header****************** -->
 		<div class="header-wrapper">
 			<!-- img, h1 and nav get  -->
 			<img src="image/logo.JPG" class="header-position" width="125" height="125" alt="猫ロゴ">
@@ -20,17 +20,18 @@
 			<h1 class="header-left">Web Authoring</h1>
 				<div>
 					<ul class="header-position">
-						<li><a href="#">トップ</a></li>
-						<li><a href="#">あなたは誰？</a></li>
+						<li><a href="index-j.html">トップ</a></li>
+						<li><a href="profile.html">あなたは誰？</a></li>
 						<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
-						<li><a href="#">W3Cとその説明</a></li>
+						<li><a href="relation.html">W3Cとその説明</a></li>
 						<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
-						<li><a href="#">利用したツールの説明</a></li>
-						<li><a href="#">評価実験結果</a></li>
-						<li><a href="#">考察</a></li>
+						<li><a href="tool.html">利用したツールの説明</a></li>
+						<li><a href="result.html">評価実験結果</a></li>
+						<li><a href="consideration.html">考察</a></li>
 					</ul>
 				</div>
-		</div>
+		</div> <!-- *****************common    header****************** -->
+
 		<!-- cat image -->
 		<div class="top-wrapper"></div>
 
@@ -38,8 +39,8 @@
 			<!-- <img src="image/top_cat1.JPG" width="1300" height="900" alt="猫"> -->
 			<div class="main-container">
 				<h1>実験の目的</h1>
-				<p>Webドキュメントの文書データ管理の概念と共に，人が見る・使うという観点から文書データの デザインの概念について理解を深める。</p>
-				<p>Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い，様々なWeb サイトやページ対して Web ユーザビリティや Web アクセシビリティの調査を行い，考察する。</p>
+				<p>・Webドキュメントの文書データ管理の概念と共に，人が見る・使うという観点から文書データの デザインの概念について理解を深める。</p>
+				<p>・Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い，様々なWeb サイトやページ対して Web ユーザビリティや Web アクセシビリティの調査を行い，考察する。</p>
 			</div>
 		</div>
 	<footer> 
@@ -47,15 +48,14 @@
 			<h3>SiteMap</h3>
 			<div class="">
 				<ul class="">
-					<li>
-						<span class="#"><a href="index-j.html">トップ</a></span>
-					</li>
-					<li>
-						<span class="#"><a href="index-j.html">猫の世界</a></span>
-					</li>
-					<li>
-						<span class="#"><a href="index-j.html">その他の動物の紹介</a></span>
-					</li>
+					<li><a href="index-j.html">トップ</a></li>
+					<li><a href="#">あなたは誰？</a></li>
+					<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+					<li><a href="relation.html">W3Cとその説明</a></li>
+					<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+					<li><a href="#">利用したツールの説明</a></li>
+					<li><a href="#">評価実験結果</a></li>
+					<li><a href="#">考察</a></li>
 				</ul>
 			</div>
 			<small>Copyright &copy; 2018 Uemura Yuto. All Rights Reserved.</small>
