--- a/index-j.html
+++ b/index-j.html
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- Japanese version -->
-<html lang="ja">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<meta charset="utf-8">
+		<!-- <meta charset="utf-8"> -->
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>WebAuthoring</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css" />
 	</head>
 	<body>
 		<!-- *****************common    header****************** -->
 		<div class="header-wrapper">
 			<!-- img, h1 and nav get  -->
-			<img src="image/logo.JPG" class="header-position" width="125" height="125" alt="猫ロゴ">
+			<img src="image/logo.JPG" class="header-position" width="115" height="115" alt="猫ロゴ" />
 				<div>
 					<ul class="header-languages">
 						<li><a href="index-j.html">日本語</a></li>
 						<li><a href="index_en-j.html">English</a></li>
 					</ul>
 				</div>
-			<h1 class="header-left">Web Authoring</h1>
+			<h1>Web Authoring</h1>
 				<div>
 					<ul class="header-position">
-						<li><a href="index-j.html">トップ</a></li>
+						<li><a href="index-j.html" class="current-path-header">トップ</a></li>
 						<li><a href="profile.html">あなたは誰？</a></li>
 						<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
 						<li><a href="relation.html">W3Cとその説明</a></li>
@@ -38,28 +39,39 @@
 		<div>
 			<!-- <img src="image/top_cat1.JPG" width="1300" height="900" alt="猫"> -->
 			<div class="main-container">
-				<h1>実験の目的</h1>
-				<p>・Webドキュメントの文書データ管理の概念と共に，人が見る・使うという観点から文書データの デザインの概念について理解を深める。</p>
-				<p>・Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い，様々なWeb サイトやページ対して Web ユーザビリティや Web アクセシビリティの調査を行い，考察する。</p>
+				<h1 class="title-border">実験の目的</h1>
+				<p>・webドキュメントの文書データ管理の概念と共に、人が見る、使うという観点から文書データのデザインの概念について理解を深める。</p>
+				<p>・Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセシビリティの調査を行い、考察する。</p>
 			</div>
 		</div>
-	<footer> 
+		
+	<div class="footer"> 
 		<div class="container"> <!-- footer内の左右224pxの幅でフィールド設置 -->
 			<h3>SiteMap</h3>
-			<div class="">
-				<ul class="">
-					<li><a href="index-j.html">トップ</a></li>
-					<li><a href="#">あなたは誰？</a></li>
+			<div>
+				<ul>
+					<li><a href="index-j.html" class="current-path-footer">トップ</a></li>
+					<li><a href="profile.html">あなたは誰？</a></li>
 					<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
 					<li><a href="relation.html">W3Cとその説明</a></li>
 					<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
-					<li><a href="#">利用したツールの説明</a></li>
-					<li><a href="#">評価実験結果</a></li>
-					<li><a href="#">考察</a></li>
+					<li><a href="tool.html">利用したツールの説明</a></li>
+					<li><a href="result.html">評価実験結果</a></li>
+					<li><a href="consideration.html">考察</a></li>
 				</ul>
 			</div>
 			<small>Copyright &copy; 2018 Uemura Yuto. All Rights Reserved.</small>
+			<div class="checker-img">
+				<a href="http://validator.w3.org/check?uri=referer">
+					<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+				</a>
+			</div>
+			<div class="checker-img">
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+					<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="正当なCSSです!" />
+				</a>
+			</div>
 		</div>
-	</footer>
+	</div>
 	</body>
 </html>
