--- a/relation.html
+++ b/relation.html
@@ -1,8 +1,9 @@
 <!--* W3Cとアクセシビリティおよびバリデーションの関係とその説明 *-->
-<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" /> -->
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>W3Cとその説明</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
@@ -11,28 +12,79 @@
 </head>
 <body>
     <div class="header-wrapper">
-            <!-- img, h1 and nav get  -->
-            <img src="image/logo.JPG" class="header-position" width="125" height="125" alt="猫ロゴ">
-                <div>
-                    <ul class="header-languages">
-                        <li><a href="index-j.html">日本語</a></li>
-                        <li><a href="index_en-j.html">English</a></li>
-                    </ul>
-                </div>
-            <h1 class="header-left">Web Authoring</h1>
-                <div>
-                    <ul class="header-position">
-                        <li><a href="index-j.html">トップ</a></li>
-                        <li><a href="profile.html">あなたは誰？</a></li>
-                        <!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
-                        <li><a href="relation.html">W3Cとその説明</a></li>
-                        <!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
-                        <li><a href="tool.html">利用したツールの説明</a></li>
-                        <li><a href="result.html">評価実験結果</a></li>
-                        <li><a href="consideration.html">考察</a></li>
-                    </ul>
-                </div>
-        </div> <!-- *****************common    header****************** -->
+        <!-- img, h1 and nav get  -->
+        <img src="image/logo.JPG" class="header-position" width="115" height="115" alt="猫ロゴ" />
+        <div>
+            <ul class="header-languages">
+                <li><a href="index-j.html">日本語</a></li>
+                <li><a href="index_en-j.html">English</a></li>
+            </ul>
+        </div>
+        <h1>Web Authoring</h1>
+        <div>
+            <ul class="header-position">
+                <li><a href="index-j.html">トップ</a></li>
+                <li><a href="profile.html">あなたは誰？</a></li>
+                <!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+                <li><a href="relation.html" class="current-path-header">W3Cとその説明</a></li>
+                <!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+                <li><a href="tool.html">利用したツールの説明</a></li>
+                <li><a href="result.html">評価実験結果</a></li>
+                <li><a href="consideration.html">考察</a></li>
+            </ul>
+        </div>
+    </div> <!-- *****************common    header****************** -->
+
+    <div>
+        <div class="main-container">
+            <h1>W3Cとは</h1>
+            <p>W3C(ダブリュースリーシー)は、World Wide Web Consortium(ワールド・ワイド・ウェブ・コンソーシアム)が正式名称であり、World Wide Webで使用される各種技術の標準化を推進する為に設立された標準化団体、非営利団体である。</p>
+            <p>ティム・バーナーズ＝リーが創設し率いている。</p>
+            <p>このコンソーシアムには企業、団体が加入し、専任スタッフとともにWorld Wide Webの標準策定を行なっている。</p>
+            <p>2014年1月26日現在、388の組織が会員として加入している。</p>
+            <p>W3Cは教育活動も行なっており、ソフトウェアを開発してWebに関するオープンな議論の場を提供している。</p>
+            
+            <h1>アクセシビリティ</h1>
+            <p>アクセシビリティとは、Webサイトへのアクセスのしやすさのことである。</p>
+            <p>あらゆる人がどのような環境でも柔軟にWebサイトを利用できることを考慮する場合に使用される。</p>
+
+            <h1>バリデーションとは</h1>
+            <p>バリデーションとは、記述または入力されたデータがあらかじめ規定された条件、仕様、形式などに適合しているかを検証・確認することである。</p>
+            <p>また、記述に用いた言語の文法やプログラムに要求される仕様に則って正しく記述されているかを検証することである。</p>
+
+            <h1>これらの関係</h1>
+            <p></p>
+        </div>
+    </div>
+
+    <div class="footer"> 
+		<div class="container"> <!-- footer内の左右224pxの幅でフィールド設置 -->
+			<h3>SiteMap</h3>
+			<div>
+				<ul>
+					<li><a href="index-j.html">トップ</a></li>
+					<li><a href="profile.html">あなたは誰？</a></li>
+					<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+					<li><a href="relation.html" class="current-path-footer">W3Cとその説明</a></li>
+					<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+					<li><a href="tool.html">利用したツールの説明</a></li>
+					<li><a href="result.html">評価実験結果</a></li>
+					<li><a href="consideration.html">考察</a></li>
+				</ul>
+			</div>
+			<small>Copyright &copy; 2018 Uemura Yuto. All Rights Reserved.</small>
+			<div class="checker-img">
+				<a href="http://validator.w3.org/check?uri=referer">
+					<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+				</a>
+			</div>
+			<div class="checker-img">
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+					<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="正当なCSSです!" />
+				</a>
+			</div>
+		</div>
+	</div>
     
 </body>
 </html>
