--- a/tool.html
+++ b/tool.html
@@ -1,8 +1,9 @@
 <!--* アクセシビリティおよびバリデーションに利用したツールの説明 *-->
-<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" /> -->
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>W3Cとその説明</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
@@ -11,28 +12,67 @@
 </head>
 <body>
     <div class="header-wrapper">
-            <!-- img, h1 and nav get  -->
-            <img src="image/logo.JPG" class="header-position" width="125" height="125" alt="猫ロゴ">
-                <div>
-                    <ul class="header-languages">
-                        <li><a href="index-j.html">日本語</a></li>
-                        <li><a href="index_en-j.html">English</a></li>
-                    </ul>
-                </div>
-            <h1 class="header-left">Web Authoring</h1>
-                <div>
-                    <ul class="header-position">
-                        <li><a href="index-j.html">トップ</a></li>
-                        <li><a href="profile.html">あなたは誰？</a></li>
-                        <!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
-                        <li><a href="relation.html">W3Cとその説明</a></li>
-                        <!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
-                        <li><a href="tool.html">利用したツールの説明</a></li>
-                        <li><a href="result.html">評価実験結果</a></li>
-                        <li><a href="consideration.html">考察</a></li>
-                    </ul>
-                </div>
-        </div> <!-- *****************common    header****************** -->
+        <!-- img, h1 and nav get  -->
+        <img src="image/logo.JPG" class="header-position" width="115" height="115" alt="猫ロゴ" />
+        <div>
+            <ul class="header-languages">
+                <li><a href="index-j.html">日本語</a></li>
+                <li><a href="index_en-j.html">English</a></li>
+            </ul>
+        </div>
+        <h1>Web Authoring</h1>
+        <div>
+            <ul class="header-position">
+                <li><a href="index-j.html">トップ</a></li>
+                <li><a href="profile.html">あなたは誰？</a></li>
+                <!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+                <li><a href="relation.html">W3Cとその説明</a></li>
+                <!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+                <li><a href="tool.html" class="current-path-header">利用したツールの説明</a></li>
+                <li><a href="result.html">評価実験結果</a></li>
+                <li><a href="consideration.html">考察</a></li>
+            </ul>
+        </div>
+    </div> <!-- *****************common    header****************** -->
     
+    <div>
+        <div class="main-container">
+            <h1><a href="https://validator.w3.org">The W3C Markup Validation Service</a>とは</h1>
+            <p>W3Cによって作成された、HTML文書がHTMLやXHTML標準へ準拠しているかどうかを検証するためのサービスである。</p>
+            <p>これにより、XHTMLの仕様に合致しているか検証することができる。</p>
+
+            <h1><a href="https://jigsaw.w3.org/css-validator/">CSS validation Service</a>とは</h1>
+            <p class="freespace">同様に、W3CのサービスでCSSの仕様に合致しているか検証することができる。</p>
+        </div>
+    </div>
+
+    <div class="footer"> 
+		<div class="container"> <!-- footer内の左右224pxの幅でフィールド設置 -->
+			<h3>SiteMap</h3>
+			<div>
+				<ul>
+					<li><a href="index-j.html">トップ</a></li>
+					<li><a href="profile.html">あなたは誰？</a></li>
+					<!-- <li><a href="#">W3Cとアクセシビリティおよびバリデーションの関係とその説明</a></li> -->
+					<li><a href="relation.html">W3Cとその説明</a></li>
+					<!-- <li><a href="#">アクセシビリティおよびバリデーションに利用したツールの説明</a></li> -->
+					<li><a href="tool.html" class="current-path-footer">利用したツールの説明</a></li>
+					<li><a href="result.html">評価実験結果</a></li>
+					<li><a href="consideration.html">考察</a></li>
+				</ul>
+			</div>
+			<small>Copyright &copy; 2018 Uemura Yuto. All Rights Reserved.</small>
+			<div class="checker-img">
+				<a href="http://validator.w3.org/check?uri=referer">
+					<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+				</a>
+			</div>
+			<div class="checker-img">
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+					<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="正当なCSSです!" />
+				</a>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
