add table and bread list of CSS file

--- a/consideration.html
+++ b/consideration.html
@@ -8,6 +8,7 @@
     <title>W3Cとその説明</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/tableAndBread.css" />
     <!-- <script src="main.js"></script> -->
 </head>
 <body>
@@ -34,6 +35,22 @@
             </ul>
         </div>
     </div> <!-- *****************common    header****************** -->
+
+
+    <div>
+        <div class="main-container">
+            <div>
+                <ul class="bread">
+                    <li><a href="index-j.html">トップ</a></li>
+                    <li><a href="consideration.html">考察</a></li>
+                </ul>
+            </div>
+
+            <h1>考察</h1>
+            
+        </div>
+    </div>
+
 
     <div class="footer"> 
 		<div class="container"> <!-- footer内の左右224pxの幅でフィールド設置 -->
