--- a/index-j.html
+++ b/index-j.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<title>WebAuthoring</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
+		<link rel="stylesheet" type="text/css" href="css/tableAndBread.css" />
 	</head>
 	<body>
 		<!-- *****************common    header****************** -->
@@ -39,7 +40,13 @@
 		<div>
 			<!-- <img src="image/top_cat1.JPG" width="1300" height="900" alt="猫"> -->
 			<div class="main-container">
-				<h1 class="title-border">実験の目的</h1>
+				<div>
+					<ul class="bread">
+						<li><a href="index-j.html">トップ</a></li>
+					</ul>
+				</div>
+
+				<h1>実験の目的</h1>
 				<p>・webドキュメントの文書データ管理の概念と共に、人が見る、使うという観点から文書データのデザインの概念について理解を深める。</p>
 				<p>・Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセシビリティの調査を行い、考察する。</p>
 			</div>
