--- a/tool.html
+++ b/tool.html
@@ -8,6 +8,7 @@
     <title>W3Cとその説明</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/tableAndBread.css" />
     <!-- <script src="main.js"></script> -->
 </head>
 <body>
@@ -34,9 +35,16 @@
             </ul>
         </div>
     </div> <!-- *****************common    header****************** -->
-    
+
     <div>
         <div class="main-container">
+            <div>
+                <ul class="bread">
+                    <li><a href="index-j.html">トップ</a></li>
+                    <li><a href="tool.html">アクセシビリティおよびバリデーションに利用したツールの説明</a></li>
+                </ul>
+            </div>
+
             <h1><a href="https://validator.w3.org">The W3C Markup Validation Service</a>とは</h1>
             <p>W3Cによって作成された、HTML文書がHTMLやXHTML標準へ準拠しているかどうかを検証するためのサービスである。</p>
             <p>これにより、XHTMLの仕様に合致しているか検証することができる。</p>
