--- a/consideration.html
+++ b/consideration.html
@@ -46,7 +46,22 @@
                 </ul>
             </div>
 
-            <h1>考察</h1>
+            <div class="result-position">
+                <h1>考察</h1>
+                <p>このWebオーサリングの実験で１０個のバリデーションのチェックを行なったが、HTMLとCSSでエラー、警告が多く見られた。<br>
+                エラーなどが０個という結果は(自分の調べた中では)なく、エラーがあるのもに関しては極端に多かったり少なかったりであった。</p>
+                <p>今回チェッカーを使用し、標準化が進んでいるかどうか調べたが、実験結果から作成者はバリデーションを気にしていないことがわかる。</p>
+                <p></p>
+                <p>HTML、CSSはCやC++のようにコンパイルすることがなく、エラーも表示されず、自分の書きたいようにかける。<br>
+                    ただ書いたにも関わらず表示されなければ書き方が悪いだけでチェッカーに通さない。
+                </p>
+                <p>このことから作成者は厳格な書き方ではなく、曖昧な書き方で表示させていることがわかる。</p>
+                <p>XHTMLはHTMLよりも正しい文法で記述することが求められる。<br>
+                header、footerやsectionなどHTMLで使用できるタグが禁止されていたり、imgやlinkの最後にはしっかりと「/」で閉じなければいけない、<br>
+                などの制約が厳しかった。</p>
+                <p>HTML５用のバリデーターを使用すると従来の記述方式に適していると思うのでエラーなどもう少し少ないと思う。</p>
+            </div>
+
             
         </div>
     </div>
