--- a/index-j.html
+++ b/index-j.html
@@ -46,6 +46,11 @@
 					</ul>
 				</div>
 
+				<div class="result-position">
+					<h1>実験の概要</h1>
+					<p>このサイトは Uemura YutoがWebオーサリング基礎の実験で作成したページです。</p>
+				</div>
+
 				<h1>実験の目的</h1>
 				<p>・webドキュメントの文書データ管理の概念と共に、人が見る、使うという観点から文書データのデザインの概念について理解を深める。</p>
 				<p>・Web文書の記述フォーマットに対するアクセシビリティチェックのツール等を使い、様々なWebサイトやページに対してWebユーザビリティやWebアクセシビリティの調査を行い、考察する。</p>
