--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,6 @@
         </div>
     </div> <!-- *****************common    header****************** -->
 
-
     <div>
         <!-- <img src="image/top_cat1.JPG" width="1300" height="900" alt="猫"> -->
         <div class="main-container">
@@ -47,8 +46,20 @@
                 </ul>
             </div>
 
-            <h1>自己紹介</h1>
-            <p></p>
+            <div class="result-position fontsize">
+                <h1>自己紹介</h1>
+                <p>名前：植村悠斗</p>
+                <p>学部：コンピュータ理工学部</p>
+                <p>部活：C.A.C(電子計算機応用部)</p>
+                <p>趣味：バスケ</p>
+                <p>大阪産の豊中民です。</p>
+                <p>最近Web開発に興味を持っていて、夏休みに「CircleInformation」というWebアプリを作りました。<br>
+                簡単に説明するとサークル勧誘で配布されるビラを電子化して必要な機能をつけて、ビラ文化を無くそう！っていうアプリです。</p>
+                <p>この学校でビラ配りがなくなったら私のせいだと思ってください笑</p>
+                <p>未完成ですが、もう一踏ん張りでできると思うので、gitを載せておきます。<br>
+                <a href="https://github.com/uewolf25/circle_information"> ・https://github.com/uewolf25/circle_information</a></p>
+                <p>＜メモ＞<br>colgroupは列をグループにできる要素だが、フォント関連の装飾は無効。</p>
+            </div>
         </div>
     </div>
         
